# aionai

./: main.py  pyproject.toml
mcp-client/: README.md  agent_demo.py  demo.py  env.example  main.py  mcp_client.db  pyproject.toml  requirements.txt  start_all.py  start_api.py  start_web.py
mcp-client/deployment/: run_server.py
mcp-client/examples/: config.json  config.yaml  simple_server.py
mcp-client/src/mcp_client/database/: database.py  models.py
mcp-client/src/mcp_client/web/: main.py
src/: agent.py
